K8S/auth-depl.yaml
# Deployment of a container into a pod
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
  namespace: handiwork
spec:
  replicas: 2
  # select the template
  selector:
    matchLabels:
      app: auth
  # define the pod and the container we want to use
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: rawanad/handiwork-auth:362e61867cd681520bc4186b350c8727f9e161b7
          resources: {}

          readinessProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 15
            timeoutSeconds: 10

          livenessProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 15
            timeoutSeconds: 10

          startupProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 30
            timeoutSeconds: 10

          # Environment variables
---
apiVersion: v1
kind: Service
metadata:
  name: auth-clusterip-srv
  namespace: handiwork
spec:
  type: ClusterIP
  selector:
    app: auth
  ports:
    - name: auth
      protocol: TCP
      # Cluster IP port
      port: 80
      targetPort: 80
