K8S/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
  namespace: handiwork
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: client
          image: rawanad/handiwork-client:e60f8b1ef59200632162a9d4430eeca79cc48bc0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80 # the port that the container is running on in the cluster
          resources: {}

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            timeoutSeconds: 10

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            timeoutSeconds: 10

          startupProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            timeoutSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: client-clusterip-srv
  namespace: handiwork
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
    - port: 80 # port that the service is running on in the cluster
      targetPort: 80 # port exposed by the service
