K8S/rabbitmq-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-depl
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management
          ports:
            # management port (access the web interface)
            - containerPort: 15672
              name: rbmq-mgmt-port
            # port that our clients (services) will connect to
            - containerPort: 5672
              name: rbmq-msg-port
          resources: {}

          livenessProbe:
            exec:
              # This is just an example. There is no "one true health check" but rather
              # several rabbitmq-diagnostics commands that can be combined to form increasingly comprehensive
              # and intrusive health checks.
              # Learn more at https://www.rabbitmq.com/monitoring.html#health-checks.
              #
              # Stage 3 check:
              command: ["rabbitmq-diagnostics", "-q", "alarms"]
            initialDelaySeconds: 60
            # See https://www.rabbitmq.com/monitoring.html for monitoring frequency recommendations.
            periodSeconds: 60
            timeoutSeconds: 15

          readinessProbe:
            exec:
              # Stage 3 check:
              command: ["rabbitmq-diagnostics", "-q", "alarms"]
            initialDelaySeconds: 20
            periodSeconds: 60
            timeoutSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: rabbitmq
  ports:
    - name: rbmq-mgmt-port
      protocol: TCP
      # Cluster IP port
      port: 15672
      targetPort: 15672
    - name: rbmq-msg-port
      protocol: TCP
      # Cluster IP port
      port: 5672
      targetPort: 5672

---
# Load balancer
# allows us to access rabbitmq from our machine
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: rabbitmq
  ports:
    - name: rbmq-mgmt-port
      protocol: TCP
      port: 15672
      targetPort: 15672
    - name: rbmq-msg-port
      protocol: TCP
      port: 5672
      targetPort: 5672
