K8S/services-depl.yaml
# Deployment of a container into a pod
apiVersion: apps/v1
kind: Deployment
metadata:
  name: services-depl
spec:
  replicas: 2
  # select the template
  selector:
    matchLabels:
      app: services
  # define the pod and the container we want to use
  template:
    metadata:
      labels:
        app: services
    spec:
      containers:
        - name: services
          image: rawanad/handiwork-services:3458a6c27661b5ecb48c35b1152230a45b666f58
          ports:
            - containerPort: 80
          resources: {}

          readinessProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 15
            timeoutSeconds: 10

          livenessProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 15
            timeoutSeconds: 10

          startupProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 30
            timeoutSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: services-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: services
  ports:
    - name: services
      protocol: TCP
      # Cluster IP port
      # port used by other objects
      port: 80
      targetPort: 80
