K8S/users-depl.yaml
# Deployment of a container into a pod
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-depl
spec:
  replicas: 2
  # select the template
  selector:
    matchLabels:
      app: users
  # define the pod and the container we want to use
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
        - name: users
          image: rawanad/handiwork-users:e2d32342924e0fa40137b311aec1cc8e88c136c6
          resources: {}
---
apiVersion: v1
kind: Service
metadata:
  name: users-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: users
  ports:
    - name: users
      protocol: TCP
      # Cluster IP port
      port: 80
      targetPort: 80
