K8S/users-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-srv
spec:
  type: NodePort
  selector:
    app: users
  ports:
    - name: users
      protocol: TCP
      # used by other objects in the cluster
      port: 80
      # same as containerPort, the port inside the pod
      targetPort: 80
      # Optional field
      # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
      nodePort: 30000
