K8S/ingress-srv.yaml
# https://kubernetes.github.io/ingress-nginx/user-guide/ingress-path-matching/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    # gateway
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    # allow nginx to update routes (e.g. /api --> /)
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    #- host: handiwork.com
    #- host: localhost
    - http:
        paths:
          # frontend
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-clusterip-srv
                port:
                  number: 80
          # backend
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: users-clusterip-srv
                port:
                  number: 80
          - path: /api/users/?(.*)/services/?(.*)
            pathType: Prefix
            backend:
              service:
                name: services-clusterip-srv
                port:
                  number: 80
          - path: /api/servicecategories/?(.*)
            pathType: Prefix
            backend:
              service:
                name: services-clusterip-srv
                port:
                  number: 80
